--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>html5 canvas梦幻背景动画特效 - 站长素材</title>
+<title>徐雨祥的个人网站</title>
 
 <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/demo.css">
@@ -12,10 +12,10 @@
 
 </head>
 <body>
-
-<canvas id="c2"></canvas>
+<h1>22424242</h1></div>
+<canvas id="c2"><div></canvas>
 <canvas id="c1"></canvas>
-<div><h1>22424242</h1></div>
+
 
 <script src="js/index.js"></script>
 
