--- a/index.html
+++ b/index.html
@@ -9,15 +9,60 @@
 <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/demo.css">
 <link rel="stylesheet" href="css/style.css">
-
+<style>
+	html,body{
+		height:100%;
+	}
+	#cotent{
+		position: relative;
+		z-index: 10;
+		width: 100%;
+		height:100%;
+	}
+	#head{
+		width:100%;
+		height:25%;
+		display: flex;
+    	justify-content: center;
+    	align-items: center;
+	}
+	#body{
+		width:100%;
+		height:50%;
+		display: flex;
+    	justify-content: center;
+    	align-items: center;
+	}
+	#bottom{
+		width: 100%;
+		height:25%;
+		display: flex;
+    	justify-content: center;
+    	align-items: center;
+	}
+	span{
+		color:black;
+		font-size:100px;
+		font-family: 微软雅黑;
+	}
+</style>
 </head>
 <body>
-<h1>22424242</h1></div>
-<canvas id="c2"><div></canvas>
+<div id="cotent">
+	<div id="head"><span class="head_span" onclick="test()">head</span></div>
+	<div id="body"><span class="head_span">body</span></div>
+	<div id="bottom"><span class="head_span">bottom</span></div>
+</div>
+<canvas id="c2"></canvas>
 <canvas id="c1"></canvas>
 
 
 <script src="js/index.js"></script>
+<script>
+	function test(){
+		alert("surprise!")
+	}
+</script>
 
 </body>
 </html>
